--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "email dev",
     "seed": "npx tsx ./lib/db/seed.ts",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
